# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hiappevent_cleaner_config") {
  visibility = [ "*:*" ]
  include_dirs = [ "include" ]
}

ohos_source_set("hiappevent_cleaner") {
  public_configs = [ ":hiappevent_cleaner_config" ]

  sources = [
    "app_event_db_cleaner.cpp",
    "app_event_log_cleaner.cpp",
  ]

  deps = [
    "../cache:hiappevent_cache",
    "../utility:hiappevent_utility",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "relational_store:native_rdb",
  ]
}
