# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hiappevent_watcher_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "../include",
    "../load/include",
    "../../../../interfaces/native/inner_api/include",
    "//third_party/jsoncpp/include",
  ]
}

ohos_source_set("hiappevent_observer") {
  public_configs = [ ":hiappevent_watcher_config" ]

  sources = [
    "app_event_handler.cpp",
    "app_event_observer.cpp",
    "app_event_observer_mgr.cpp",
    "app_event_processor_proxy.cpp",
    "app_event_watcher.cpp",
    "app_state_callback.cpp",
    "os_event_listener.cpp",
  ]

  deps = [
    "../cache:hiappevent_cache",
    "../utility:hiappevent_utility",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "relational_store:native_rdb",
    "storage_service:storage_manager_acl",
  ]

  part_name = "hiappevent"
  subsystem_name = "hiviewdfx"
}
